feat: P4ADEV-1928 bff debt position type org creazione api elenco enti totale dpto per ente (#83)